// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/Filter Added Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 0.25rem 0 1rem;
  border-radius: 1.5rem;
  border-right: 0!important;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

.emotion-12 {
  height: 100%;
  width: 0.0625rem;
  position: relative;
  min-width: 0.0625rem;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  background-color: #cfd7e5;
  border-top: solid 0.0625rem #cfd7e5;
  border-bottom: solid 0.0625rem #cfd7e5;
}

.emotion-13 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 2.125rem;
  border-left: 0!important;
  padding-left: 0.25rem;
  padding-right: 0.25rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-top-right-radius: 1.5rem;
  border-bottom-right-radius: 1.5rem;
}

.emotion-13:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-15 {
  fill: #5b5b71;
  width: 1.1875rem;
  height: 1.1875rem;
}

.emotion-15 path {
  fill: #5b5b71;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <h2>
      Added
    </h2>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-4"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-12"
                />
                <div
                  className="emotion-13"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-15"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-4"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
                <span
                  className="emotion-12"
                />
                <div
                  className="emotion-13"
                >
                  <span
                    className="emotion-10"
                    onClick={[Function]}
                  >
                    <span
                      className="emotion-15"
                    />
                  </span>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div>
      Transparent Styles are not available for added filters
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-2:hover>div {
  background-color: #f3f5f8;
}

.emotion-2:active>div {
  background-color: #e7ebf2;
}

.emotion-2:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-2:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-3:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-5 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-6 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-9 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-7"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Async Filter with min characters 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-2 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-2:hover>div {
  background-color: #f3f5f8;
}

.emotion-2:active>div {
  background-color: #e7ebf2;
}

.emotion-2:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-2:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-3 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-3:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-5 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-6 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-6 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-6 span {
  font-weight: 700;
}

.emotion-7 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-8 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-9 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-9 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      role="button"
    >
      <div
        className="emotion-1"
      >
        <button
          className="emotion-2"
          data-testid="filter"
          disabled={false}
          onClick={[Function]}
        >
          <div
            className="emotion-3"
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <span
                  className="emotion-6"
                >
                  <div>
                    Async Label
                     
                    : 
                  </div>
                  <span
                    className="emotion-7"
                  >
                    Default value
                  </span>
                </span>
              </div>
              <span
                className="emotion-8"
                onClick={[Function]}
              >
                <span
                  className="emotion-9"
                />
              </span>
            </div>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Dynamic Filter Props 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-2 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-3 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-3:hover>div {
  background-color: #f3f5f8;
}

.emotion-3:active>div {
  background-color: #e7ebf2;
}

.emotion-3:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-3:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-4 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-4:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-6 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-7 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-7 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-7 span {
  font-weight: 700;
}

.emotion-8 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-9 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-10 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-10 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div>
        filled
        (
        primary
        ): 
      </div>
      <div
        role="button"
      >
        <div
          className="emotion-2"
        >
          <button
            className="emotion-3"
            data-testid="filter"
            disabled={false}
            onClick={[Function]}
          >
            <div
              className="emotion-4"
            >
              <div
                className="emotion-5"
              >
                <div
                  className="emotion-6"
                >
                  <span
                    className="emotion-7"
                  >
                    <div>
                      you can change me
                       
                      : 
                    </div>
                    <span
                      className="emotion-8"
                    >
                      Peach
                    </span>
                  </span>
                </div>
                <span
                  className="emotion-9"
                  onClick={[Function]}
                >
                  <span
                    className="emotion-10"
                  />
                </span>
              </div>
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Preset Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

.emotion-25 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-25:hover>div {
  background-color: #f3f5f8;
}

.emotion-25:active>div {
  background-color: #e7ebf2;
}

.emotion-25:focus-visible>div {
  border: 0.0625rem solid #F814E1;
}

.emotion-25:focus-visible>span {
  border-top: 0.0625rem solid #F814E1;
  border-bottom: 0.0625rem solid #F814E1;
}

.emotion-26 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: transparent;
  border: solid 0.0625rem transparent;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-26:hover {
  border: solid 0.0625rem transparent;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <h2>
      Preset
    </h2>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-4"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            filled
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-4"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <h2>
      Transparent
    </h2>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            transparent
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-25"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-26"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            transparent
            (
            secondary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-25"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-26"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/Filter Searchable Filter 1`] = `
.emotion-0 {
  background-color: transparent;
  color: #000;
  outline: none;
  border-radius: 4px;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-3 {
  position: relative;
  display: inline-block;
  height: 2.25rem;
}

.emotion-4 {
  background: none;
  border: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 100%;
  min-width: 6.875rem;
}

.emotion-4:hover>div {
  background-color: #f3f5f8;
}

.emotion-4:active>div {
  background-color: #e7ebf2;
}

.emotion-4:focus-visible>div {
  border: 0.1875rem solid #F814E1;
}

.emotion-4:focus-visible>span {
  border-top: 0.1875rem solid #F814E1;
  border-bottom: 0.1875rem solid #F814E1;
}

.emotion-5 {
  font-size: 0.8125rem;
  cursor: pointer;
  height: 100%;
  opacity: 1;
  -webkit-transition: all 150ms linear;
  transition: all 150ms linear;
  color: #0f0f17;
  background-color: #fefefe;
  border: solid 0.0625rem #cfd7e5;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  padding: 0 1rem 0 1rem;
  border-radius: 1.5rem;
}

.emotion-5:hover {
  border: solid 0.0625rem #cfd7e5;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  gap: 0.25rem;
  height: 100%;
}

.emotion-7 {
  line-height: 0.9375rem;
  margin-left: 0;
}

.emotion-8 {
  font-weight: 400;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-8 div {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.emotion-8 span {
  font-weight: 700;
}

.emotion-9 {
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  display: inline-block;
}

.emotion-10 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-11 {
  fill: #0f0f17;
  width: 0.4375rem;
  height: 0.4375rem;
}

.emotion-11 path {
  fill: #0f0f17;
}

<div
  style={
    Object {
      "backgroundColor": "#F2F2F2",
      "flex": 1,
      "flexDirection": "column",
      "height": "100vh",
      "padding": 5,
      "position": "relative",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "margin": 15,
      }
    }
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "flex-end",
        }
      }
    >
      <button
        className="emotion-0"
        onClick={[Function]}
      >
        turn 
        dark
         on
      </button>
    </div>
    <div
      className="emotion-1"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-2"
        >
          <div>
            filled
            (
            primary
            ): 
          </div>
          <div
            role="button"
          >
            <div
              className="emotion-3"
            >
              <button
                className="emotion-4"
                data-testid="filter"
                disabled={false}
                onClick={[Function]}
              >
                <div
                  className="emotion-5"
                >
                  <div
                    className="emotion-6"
                  >
                    <div
                      className="emotion-7"
                    >
                      <span
                        className="emotion-8"
                      >
                        <div>
                          Label
                           
                          : 
                        </div>
                        <span
                          className="emotion-9"
                        >
                          Default value
                        </span>
                      </span>
                    </div>
                    <span
                      className="emotion-10"
                      onClick={[Function]}
                    >
                      <span
                        className="emotion-11"
                      />
                    </span>
                  </div>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
